src/third_party/nasm/travis/test/align13.stderr
./travis/test/align13.asm:7: error: segment alignment `13' is not power of two
./travis/test/align13.asm:10: error: segment alignment `13' is not power of two
./travis/test/align13.asm:13: error: segment alignment `13' is not power of two
./travis/test/align13.asm:14: error: segment alignment `13' is not power of two
